kubernetes/clusters/live/config/minecraft/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: minecraft
  labels:
    istio.io/dataplane-mode: ambient
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
    network-policy.homelab/profile: internal-egress
