kubernetes/clusters/live/config/minecraft/network-policy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: minecraft-game-server
  namespace: minecraft
spec:
  description: "Minecraft: Java TCP 25565 + Bedrock UDP 19132 game traffic, RCON TCP 25575 from cluster subnet"
  endpointSelector: { }
  ingress:
    - fromEntities:
        - world
      toPorts:
        - ports:
            - port: "25565"
              protocol: TCP
            - port: "19132"
              protocol: UDP
    - fromCIDR:
        - ${cluster_node_subnet}
      toPorts:
        - ports:
            - port: "25575"
              protocol: TCP
  egress:
    # Game server sends TCP/UDP responses to connected clients
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "25565"
              protocol: TCP
            - port: "19132"
              protocol: UDP
